--- a/index.html
+++ b/index.html
@@ -2,22 +2,113 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://vijistudio.com/index.html" />
-    <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <title>Coming Soon</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Viji Studio: Digital Photography</title>
+  <meta name="description"
+    content="Digital Photography Studio in the heart of Toronto" />
+  <link rel="shortcut icon" href="https://vijistudio.com/favicon.ico" type="image/x-icon" />
+
+  <link rel="canonical" href="https://vijistudio.com/index.html" />
+  <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="subject" content="Studio Photography" />
+  <meta name="copyright" content="Viji Studio" />
+  <meta name="author" content="Viji Velu" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Viji Studio" />
+  <meta property="og:title" content="Digital Photography Studio in the heart of Toronto" />
+  <meta property="og:description"
+    content="Digital Photography Studio in the heart of Toronto" />
+  <meta property="og:url" content="https://vijistudio.com" />
+  <meta property="og:image" content="https://vijistudio.com/logo.png" />
+  <meta property="og:image:url" content="https://vijistudio.com/logo.png" />
+  <meta property="og:image:alt" content="Website Name And Logo" />
+  <meta property="fb:app_id" content="2519717764938880" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Digital Photography Studio in the heart of Toronto" />
+  <meta name="twitter:description"
+    content="Digital Photography Studio in the heart of Toronto" />
+  <meta name="twitter:site" content="@viewsbyviji" />
+  <meta name="twitter:image" content="https://vijistudio.com/logo.png/" />
+ <!-- to be updated- pinterest, google, bing, yandex etc -->
+  
+  <meta name="keywords"
+    content="Corporate Photography, Promotional Photography, Fashion Photography,Marketing Photography, Film Photography, Lifestyle Photography" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <center>
-        <h1>Coming Soon</h1>
-        <img src="logo.png" alt="Digital Designers">
-    </center>
-    <center>
-        <p>Digital Designers at work</p>
-    </center>
-    <center><a href="https://digitaldesigners.ca">Visit Us</a></center>
+  <div id="wrapper">
+    <header>
+      <nav>
+          <ul>
+            <li><a class="current" href="index.html">VIJI</a></li>
+            <li><a href="photography.html">PHOTO</a></li>
+            <li><a href="studio.html">STUDIO</a></li>     
+            <li><a href="service.html">SERVICE</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+          </ul>
+      </nav>
+    </header>
+
+    <div id="main">
+      <article class="home">
+
+        <svg data-icon="person-booth" class="fa-person-booth" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M192 496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V320h-64v176zm32-272h-50.9l-45.2-45.3C115.8 166.6 99.7 160 82.7 160H64c-17.1 0-33.2 6.7-45.3 18.8C6.7 190.9 0 207 0 224.1L.2 320 0 480c0 17.7 14.3 32 31.9 32 17.6 0 32-14.3 32-32l.1-100.7c.9.5 1.6 1.3 2.5 1.7l29.1 43v56c0 17.7 14.3 32 32 32s32-14.3 32-32v-56.5c0-9.9-2.3-19.8-6.7-28.6l-41.2-61.3V253l20.9 20.9c9.1 9.1 21.1 14.1 33.9 14.1H224c17.7 0 32-14.3 32-32s-14.3-32-32-32zM64 128c26.5 0 48-21.5 48-48S90.5 32 64 32 16 53.5 16 80s21.5 48 48 48zm224-96l31.5 223.1-30.9 154.6c-4.3 21.6 13 38.3 31.4 38.3 15.2 0 28-9.1 32.3-30.4.9 16.9 14.6 30.4 31.7 30.4 17.7 0 32-14.3 32-32 0 17.7 14.3 32 32 32s32-14.3 32-32V0H288v32zm-96 0v160h64V0h-32c-17.7 0-32 14.3-32 32zM544 0h-32v496c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V32c0-17.7-14.3-32-32-32z"></path></svg>
+        <h1>Art of Perfection from Start to Finish</h1>
+        <p>
+          A modern photography studio where you get to make the amazing photographs at your comfort. You be the creative director and we make sure your vision comes alive through our expertise. Let us create photographs at the finest quality using the state of art technology. 
+        </p>
+      </article>
+    </div>
+    <footer>
+      <p>
+        ©2015-2020 Viji Studio. All Rights Reserved.
+        <a href="questions.html">Questions</a> |
+        <a href="terms.html">Terms</a> |
+        <a href="conditions.html">Conditions</a> |
+        <a href="privacy.html">Privacy</a> |
+        <a href="cookies.html">Cookies</a> |
+        <a href="https://digitaldesigners.ca" target="_blank" rel="noopener noreferrer"> Designed by Digital
+          Designers</a>
+      </p>
+      <script type="application/ld+json">
+          {
+            "@context": "http://www.schema.org",
+            "@type": "ProfessionalService",
+            "name": "Viji Studio",
+            "url": "https://vijistudio.com",
+            "sameAs": [
+              "https://facebook.com/viewsbyviji",
+              "https://instagram.com/viewsbyviji",
+              "https://twitter.com/viewsbyviji",
+              "https://pinterest.ca/viewsbyviji",
+              "https://viewsbyviji.tumblr.com",
+              "https://500px.com/viewsbyviji",
+              "https://flickr.com/photos/viewsbyviji",
+              "https://linkedin.com/company/viewsbyviji",
+              ""
+            ],
+            "logo": "https://vijistudio.com/logo.png",
+            "priceRange": "$$$",
+            "image": "https://vijistudio.com/logo.png",
+            "description": "Learn to become a Photographer",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "945 Midland Avenue",
+              "addressLocality": "Toronto",
+              "addressRegion": "ON",
+              "postalCode": "M1K 4G5",
+              "addressCountry": "Canada"
+            },
+            "telephone": "416-882-8427"
+          }
+        </script>
+      <script async src="script.js"></script>
+    </footer>
+  </div>
 </body>
 
 </html>
