--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     content="Digital Photography Studio in the heart of Toronto" />
   <meta name="twitter:site" content="@viewsbyviji" />
   <meta name="twitter:image" content="https://vijistudio.com/logo.png/" />
- <!-- to be updated- pinterest, google, bing, yandex etc -->
+ 
+ <meta name="google-site-verification" content="sirimkZRqiskqkBtPXglLRsh2No3yCVMbTO7wrermxA" />
+ <meta name="msvalidate.01" content="4D62C07C8D78D80A59F36B67650A94B4" />
+ <meta name="yandex-verification" content="cbead108b079e918" />
   
   <meta name="keywords"
     content="Corporate Photography, Promotional Photography, Fashion Photography,Marketing Photography, Film Photography, Lifestyle Photography" />
