--- a/studio.html
+++ b/studio.html
@@ -39,7 +39,7 @@
         </div>
         <div class="card-big">
         <h1>Our Footprints Across the Nation</h1>
-        <p>Nothing can be more assuring than to know that your business solutions are closer to your home. We are in the heart of Toronto, Montreal and Vancouver. You can find us at the locations below. Due to the nature of our business, we are always on the run, please book an appointment in prior to visiting to ensure someone is available to serve you. </p>
+        <p>What else could be more assuring than to know that your business solutions are closer to your home than you thought? We are in the heart of Toronto, Montreal and Vancouver. You can find us at the locations below. Due to the nature of our business, we are always on the run, please book an appointment in prior to visiting to ensure someone is available to serve you. </p>
         </div>
 
         <div class="card">
