--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Viji Studio: Digital Photography Service</title>
+  <title>Viji Studio: Digital Photography & Filmography</title>
   <meta name="description"
     content="Digital Photography Studio in the heart of Toronto" />
   <link rel="shortcut icon" href="https://vijistudio.com/favicon.ico" type="image/x-icon" />
@@ -38,7 +38,7 @@
             <svg data-icon="camera-retro" class="fa-camera" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M48 32C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48H48zm0 32h106c3.3 0 6 2.7 6 6v20c0 3.3-2.7 6-6 6H38c-3.3 0-6-2.7-6-6V80c0-8.8 7.2-16 16-16zm426 96H38c-3.3 0-6-2.7-6-6v-36c0-3.3 2.7-6 6-6h138l30.2-45.3c1.1-1.7 3-2.7 5-2.7H464c8.8 0 16 7.2 16 16v74c0 3.3-2.7 6-6 6zM256 424c-66.2 0-120-53.8-120-120s53.8-120 120-120 120 53.8 120 120-53.8 120-120 120zm0-208c-48.5 0-88 39.5-88 88s39.5 88 88 88 88-39.5 88-88-39.5-88-88-88zm-48 104c-8.8 0-16-7.2-16-16 0-35.3 28.7-64 64-64 8.8 0 16 7.2 16 16s-7.2 16-16 16c-17.6 0-32 14.4-32 32 0 8.8-7.2 16-16 16z"></path></svg>
           </div>
           <div class="card-big">
-          <h1>Photography</h1>
+          <h1>Photography & Filmography</h1>
             <p>Viji Studio portfolio is diverse; however, majority of the work involves creating
                 the finest portraits. Our professional expertise includes but not limited to Portrait Photography,
                 Event Photography, and Commercial Photography. Service rates are an estimation only, applies within
@@ -74,7 +74,7 @@
                 </ul>
             </div>
 
-      <h2>If you consider printing your best photographs...</h2>
+      <h2>We could print and frame your best photographs</h2>
       
       <p>
         Nothing could be more satisfying than to see your finest moment captured, printed and framed in your most comfortable space. That is why, we offer fine art print feature with every photography package. It is a small additional investment that you would not want to miss. Best of all, you do not have to order the prints at the same time when you reserve for photography; unless you prefer to beautify the wall sooner than later. 
@@ -104,7 +104,7 @@
             <li>$129</li>
         </ul>
       </div>
-        <h2>Even further, if you decide to create fine art photo book...</h2>
+        <h2>Consider creating a fine art photo book? There are multiple options</h2>
         <p>Photo book is the ultimate decision you can make in terms of your photographs being printed in the finest form of creative art. That may appear to be heavy handed decision at the beginning; however, we can assure that you would not be disappointed. As with the photo frames, you can always reserve the decision for a later time. For your convience, we have outlined your photo book options.</p>
         
         <div class="card card-package">
@@ -139,6 +139,8 @@
             <li>$199</li>
           </ul>
         </div>
+        <h2>Creative Cinematography & Filmography</h2>
+        <p>We create films of all kinds to best suite your needs from corporate promotional films, interviews, product marketing to special events. Since filmography work involves most appropriate tailoring to your needs, please contact for us for exact pricing information. Most of our video projects range from $350 to $2500. Our rate is solely dictated by the actual scope of the project. Do not miss the opportunity to make the next impact with our creative filmography. </p>
         </article>      
     </div>
     <footer>
