--- a/studio.html
+++ b/studio.html
@@ -34,36 +34,57 @@
 
     <div id="main">
       <article class="studio">
-        <div class="card-big">
-          <svg data-icon="street-view" class="fa-street-view" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M367.9 329.76c-4.62 5.3-9.78 10.1-15.9 13.65v22.94c66.52 9.34 112 28.05 112 49.65 0 30.93-93.12 56-208 56S48 446.93 48 416c0-21.6 45.48-40.3 112-49.65v-22.94c-6.12-3.55-11.28-8.35-15.9-13.65C58.87 345.34 0 378.05 0 416c0 53.02 114.62 96 256 96s256-42.98 256-96c0-37.95-58.87-70.66-144.1-86.24zM256 128c35.35 0 64-28.65 64-64S291.35 0 256 0s-64 28.65-64 64 28.65 64 64 64zm-64 192v96c0 17.67 14.33 32 32 32h64c17.67 0 32-14.33 32-32v-96c17.67 0 32-14.33 32-32v-96c0-26.51-21.49-48-48-48h-11.8c-11.07 5.03-23.26 8-36.2 8s-25.13-2.97-36.2-8H208c-26.51 0-48 21.49-48 48v96c0 17.67 14.33 32 32 32z"></path></svg>
-        </div>
-        <div class="card-big">
-        <h1>Our Footprints Across the Nation</h1>
-        <p>What else could be more assuring than to know that your business solutions are closer to your home than you thought? We are in the heart of Toronto, Montreal and Vancouver. You can find us at the locations below. Due to the nature of our business, we are always on the run, please book an appointment in prior to visiting to ensure someone is available to serve you. </p>
-        </div>
-
-        <div class="card">
-          <svg class="fa-map-marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"></path></svg>
-          <h3>Toronto - Primary</h3>
-          <li>945 Midland Avenue</li>
-          <li>Toronto, ON M1K 4G5</li>
-          <li>By Appointment</li>
-        </div>
-        <div class="card">
-          <svg class="fa-map-marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"></path></svg>
-          <h3>Montreal - Remote</h3>
-          <li>749 Rue de Liege</li>
-          <li>Montreal, QC H3N 1B1</li>
-          <li>By Appointment</li>
-        </div>
-        <div class="card">
-          <svg class="fa-map-marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"></path></svg>
-          <h3>Vancouver - Remote</h3>
-          <li>Coming Soon</li>
-          <li>Vancouver, BC </li>
-          <li>By Appointment</li>
-        </div>
-
+        <svg data-icon="tape" class="fa-tape" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M224 192c-35.3 0-64 28.7-64 64s28.7 64 64 64 64-28.7 64-64-28.7-64-64-64zm400 224H380.6c41.5-40.7 67.4-97.3 67.4-160 0-123.7-100.3-224-224-224S0 132.3 0 256s100.3 224 224 224h400c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm-400-64c-53 0-96-43-96-96s43-96 96-96 96 43 96 96-43 96-96 96z"></path></svg>
+        <h1>Creative Studio</h1>
+        <p>Viji Studio is the ultimatum of any creative agency can successfully accomplish on any given project. We are humbled by our expertise to deliver results utilizing the 360 capacity of our studio framework. Since the founding in 2015, our past results have proven just that - the unique capacity to undertake a particular project and exceed client expectations on all fronts. </p>
+        <svg data-icon="laptop-code" class="fa-laptop-code" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M255.03 261.65c6.25 6.25 16.38 6.25 22.63 0l11.31-11.31c6.25-6.25 6.25-16.38 0-22.63L253.25 192l35.71-35.72c6.25-6.25 6.25-16.38 0-22.63l-11.31-11.31c-6.25-6.25-16.38-6.25-22.63 0l-58.34 58.34c-6.25 6.25-6.25 16.38 0 22.63l58.35 58.34zm96.01-11.3l11.31 11.31c6.25 6.25 16.38 6.25 22.63 0l58.34-58.34c6.25-6.25 6.25-16.38 0-22.63l-58.34-58.34c-6.25-6.25-16.38-6.25-22.63 0l-11.31 11.31c-6.25 6.25-6.25 16.38 0 22.63L386.75 192l-35.71 35.72c-6.25 6.25-6.25 16.38 0 22.63zM624 416H381.54c-.74 19.81-14.71 32-32.74 32H288c-18.69 0-33.02-17.47-32.77-32H16c-8.8 0-16 7.2-16 16v16c0 35.2 28.8 64 64 64h512c35.2 0 64-28.8 64-64v-16c0-8.8-7.2-16-16-16zM576 48c0-26.4-21.6-48-48-48H112C85.6 0 64 21.6 64 48v336h512V48zm-64 272H128V64h384v256z"></path></svg>
+        <h2>Commercial Portfolio</h2>
+        <p>The diversity of services include but not limited to photography, filmography and creative designs. Our client relations go from individuals to community to corporate multi-channels. Whether it is a photography, filmography or creative design work, you can be assured that your rolling with the best in the city.</p>
+        <article class="box">
+        <section class="work">
+          <h3>Digital Designers</h3>
+          <img src="digitaldesigners.png" alt="Image of DigitalDesigners Webpage">
+                    <ul>
+                        <li>https://digitaldesigners.ca</li>
+                    </ul>
+        </section>
+        <section class="work">
+          <h3>Defined by Dhushy</h3>
+          <img src="definedbydhushy.png" alt="Image of DefinedbyDhushy Webpage"> 
+                    <ul>
+                        <li>https://definedbydhushy.com</li>
+                    </ul>
+        </section>
+        <section class="work">
+          <h3>Diet for Life</h3>
+          <img src="dietforlife.png" alt="Image of DietforLife Webpage"> 
+                    <ul>
+                        <li>https://dietforlife.ca</li>
+                    </ul>
+        </section>
+        <section class="work">
+          <h3>Waran Media</h3>
+          <img src="waranmedia.png" alt="Image of WaranMedia Webpage"> 
+                    <ul>
+                        <li>https://waranmedia.com</li>
+                    </ul>
+        </section>
+        <section class="work">
+          <h3>Viji Photography</h3>
+          <img src="vijiphotography.png" alt="Image of VijiPhotography Webpage"> 
+                    <ul>
+                        <li>https://vijiphotography.ca</li>
+                    </ul>
+        </section>
+        <section class="work">
+          <h3>Views by Viji</h3>
+          <img src="viewsbyviji.png" alt="Image of ViewsbyViji Webpage"> 
+                    <ul>
+                        <li>https://viewsbyviji.com</li>
+                    </ul>
+        </section>
+      </article>
+        <p>We design and develop all kinds of web projects from portfolio websites, commercial marketing showcase to independent business branding. Since every project involves different requirements, please contact for us for exact pricing information. Most of our web projects range from $500 to $2500. Our rate is solely dictated by the actual scope of the project.</p>
       </article>
 
     </div>
