--- a/service.html
+++ b/service.html
@@ -145,7 +145,7 @@
     </div>
     <footer>
       <p>
-        ©2015-2020 Viji Photography. All Rights Reserved.
+        ©2015-2020 Viji Studio. All Rights Reserved.
         <a href="questions.html">Questions</a> |
         <a href="terms.html">Terms</a> |
         <a href="conditions.html">Conditions</a> |
