--- a/terms.html
+++ b/terms.html
@@ -215,7 +215,7 @@
     </div>
     <footer>
       <p>
-        ©2015-2020 Viji Photography. All Rights Reserved.
+        ©2015-2020 Viji Studio. All Rights Reserved.
         <a href="questions.html">Questions</a> |
         <a class="current" href="terms.html">Terms</a> |
         <a href="conditions.html">Conditions</a> |
