--- a/studio.html
+++ b/studio.html
@@ -11,7 +11,7 @@
 
   <link rel="canonical" href="https://vijistudio.com/studio.html" />
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <meta name="subject" content="Studio Photography" />
+  <meta name="subject" content="Photography, Filmography & Creative Design" />
   <meta name="copyright" content="Viji Studio" />
   <meta name="author" content="Viji Velu" />
  
@@ -84,6 +84,7 @@
                     </ul>
         </section>
       </article>
+      <h2>Tailored to your needs</h2>
         <p>We design and develop all kinds of web projects from portfolio websites, commercial marketing showcase to independent business branding. Since every project involves different requirements, please contact for us for exact pricing information. Most of our web projects range from $500 to $2500. Our rate is solely dictated by the actual scope of the project.</p>
       </article>
 
