--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Viji Studio: Contact</title>
   <meta name="description"
-    content="Digital Photography Studio in the heart of Toronto" />
+    content="Photography, Filmography & Creative Design Studio in the heart of Toronto" />
   <link rel="shortcut icon" href="https://vijistudio.com/favicon.ico" type="image/x-icon" />
 
   <link rel="canonical" href="https://vijistudio.com/contact.html" />
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <meta name="subject" content="Learn Photography" />
-  <meta name="copyright" content="Viji Photography" />
+  <meta name="subject" content="Photography, Filmography & Creative Design" />
+  <meta name="copyright" content="Viji Studio" />
   <meta name="author" content="Viji Velu" />
  
   <link rel="stylesheet" href="style.css" />
