--- a/thanks.html
+++ b/thanks.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Viji Studio: Thank You</title>
   <meta name="description"
-    content="Digital Photography Studio in the heart of Toronto" />
+    content="Photography, Filmography & Creative Design Studio in the heart of Toronto" />
   <link rel="shortcut icon" href="https://vijistudio.com/favicon.ico" type="image/x-icon" />
 
   <link rel="canonical" href="https://vijistudio.com/thanks.html" />
   <meta name="robots" content="max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-  <meta name="subject" content="Studio Photography" />
+  <meta name="subject" content="Photography, Filmography & Creative Design" />
   <meta name="copyright" content="Viji Studio" />
   <meta name="author" content="Viji Velu" />
  
