--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
 
           <p><input type="submit" class="contact-form-btn" value="Send"></label></p>
       </form>
-      
+      <h2>Our Acknowledgements</h2>
       <p class="last">
         Thank you for your interest in our work. So honoured that you've considered us for your next project. We would love to learn more about your needs, please fill out the form above and we will be in touch with you soon.
       </p>
