--- a/contact.html
+++ b/contact.html
@@ -41,22 +41,19 @@
       <div class="card">
         <svg class="fa-map-marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"></path></svg>
         <h3>Toronto - Primary</h3>
-        <p>945 Midland Avenue</p>
-        <p>Toronto, ON M1K 4G5</p>
+        <p>945 Midland Avenue <br> Toronto, ON M1K 4G5</p>
         <p>By Appointment</p>
       </div>
       <div class="card">
         <svg class="fa-map-marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"></path></svg>
         <h3>Montreal - Remote</h3>
-        <p>749 Rue de Liege</p>
-        <p>Montreal, QC H3N 1B1</p>
+        <p>749 Rue de Liege <br> Montreal, QC H3N 1B1</p>
         <p>By Appointment</p>
       </div>
       <div class="card">
         <svg class="fa-map-marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"></path></svg>
         <h3>Vancouver - Remote</h3>
-        <p>Coming Soon</p>
-        <p>Vancouver, BC </p>
+        <p>Coming Soon <br> Vancouver, BC </p>
         <p>By Appointment</p>
       </div>
 
