--- a/photography.html
+++ b/photography.html
@@ -57,6 +57,9 @@
             <img src="viji-photo-4.jpg" alt=" Canadian National Tower in Toronto, ON. Canada">
           </div>
           <div class="gallery__item gallery__item--lg">
+            <img src="viji-photo-14.jpg" alt="Wedding couple posing for picture at entry to house in Toronto, ON. Canada">
+          </div>
+          <div class="gallery__item gallery__item--lg">
             <img src="viji-photo-5.jpg" alt="female in saree under the lights in Toronto, ON. Canada">
           </div>
           <div class="gallery__item">
@@ -73,6 +76,9 @@
           </div>
           <div class="gallery__item">
             <img src="viji-photo-13.jpg" alt="basketball player shooting the ball into net in Brampton, ON. Canada">
+          </div>
+          <div class="gallery__item">
+            <img src="viji-photo-15.jpg" alt="Wedding couple feeding cake to each other at reception in Toronto, ON. Canada">
           </div>
      
         </div>
