--- a/service.html
+++ b/service.html
@@ -50,28 +50,28 @@
             <div class="card">
                 <h3>Basic</h3>
                 <ul>
-                    <li>45 mins coverage</li>
+                    <li>2 hour coverage</li>
                     <li>Up to 50 images</li>
                     <li>Google Drive</li>
-                    <li>$175</li>
+                    <li>Starting $250</li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Standard</h3>
                 <ul>
-                    <li>1.5 hours coverage</li>
+                    <li>4 hours coverage</li>
                     <li>Up to 100 images</li>
                     <li>Google Drive</li>
-                    <li>$250</li>
+                    <li>Starting $450</li>
                 </ul>
             </div>
             <div class="card">
                 <h3>Premium</h3>
                 <ul>
-                    <li>3 hours coverage</li>
+                    <li>6 hours coverage</li>
                     <li>Up to 200 images</li>
                     <li>1 USB drive</li>
-                    <li>$475</li>
+                    <li>Starting $650</li>
                 </ul>
             </div>
           </div>
