--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       <div class="card">
         <svg class="fa-map-marker" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0z"></path></svg>
         <h3>Vancouver - Remote</h3>
-        <p>Coming Soon <br> Vancouver, BC </p>
+        <p>2641 East 28th Ave <br> Vancouver, BC V5R 1R8 </p>
         <p>By Appointment</p>
       </div>
 
