--- a/service.html
+++ b/service.html
@@ -61,7 +61,7 @@
                 <ul>
                     <li>4 hours coverage</li>
                     <li>Up to 150 images</li>
-                    <li>Google Drive</li>
+                    <li>1 Fine Art Print</li>
                     <li>Starting $450</li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                 <ul>
                     <li>6 hours coverage</li>
                     <li>Up to 300 images</li>
-                    <li>1 USB drive</li>
+                    <li>1 Fine Art Print</li>
                     <li>Starting $650</li>
                 </ul>
             </div>
